[gd_scene load_steps=2 format=3 uid="uid://bcgbjefvhsgef"]

[ext_resource type="Script" path="res://src/scene/setting_ui.gd" id="1_ttutr"]

[node name="SettingUI" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -283.0
offset_bottom = 163.0
grow_horizontal = 0
script = ExtResource("1_ttutr")

[node name="SettingButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -127.0
offset_top = 12.0
offset_right = -13.0
offset_bottom = 56.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.972549, 0.968627, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 32
text = "Setting"

[node name="SettingPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -272.0
offset_top = 64.0
offset_right = -13.0
offset_bottom = 158.0
grow_horizontal = 0

[node name="BGMSlider" type="HSlider" parent="SettingPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 50.0
offset_top = 17.0
offset_right = -10.0
offset_bottom = 33.0
grow_horizontal = 2

[node name="SFXSlider" type="HSlider" parent="SettingPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 52.0
offset_top = 57.0
offset_right = -10.0
offset_bottom = 73.0
grow_horizontal = 2

[node name="BGMLabel" type="Label" parent="SettingPanel"]
layout_mode = 1
offset_left = 9.0
offset_top = 13.0
offset_right = 49.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(0.576471, 0.505882, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "BGM"
horizontal_alignment = 1

[node name="SFXLabel" type="Label" parent="SettingPanel"]
layout_mode = 1
offset_left = 9.0
offset_top = 52.0
offset_right = 49.0
offset_bottom = 78.0
theme_override_colors/font_color = Color(0.576471, 0.505882, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "SFX"
horizontal_alignment = 1

[connection signal="mouse_entered" from="SettingButton" to="." method="_on_setting_button_mouse_entered"]
[connection signal="pressed" from="SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="value_changed" from="SettingPanel/BGMSlider" to="." method="_on_bgm_slider_value_changed"]
[connection signal="value_changed" from="SettingPanel/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
